[gd_scene load_steps=11 format=2]

[ext_resource path="res://characters/players/Player_JustJump_Movement.tscn" type="PackedScene" id=1]
[ext_resource path="res://SpawnPath.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://SubwayScreenBorder.tscn" type="PackedScene" id=4]
[ext_resource path="res://backgrounds/BackgroundRedistribution.tscn" type="PackedScene" id=5]
[ext_resource path="res://EnemySpawnTimer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Level_Redistribution.gd" type="Script" id=7]
[ext_resource path="res://MobDestructionBorder.tscn" type="PackedScene" id=8]
[ext_resource path="res://Audio/Background/RedisLevel.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/jump_11.wav" type="AudioStream" id=10]

[node name="RedistrubtionLevel" type="Node2D"]
script = ExtResource( 7 )

[node name="SpawnPath" parent="." instance=ExtResource( 2 )]
position = Vector2( -300, 0 )

[node name="BackgroundRedistribution" parent="." instance=ExtResource( 5 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Sound" type="AudioStreamPlayer" parent="Player"]

[node name="JumpSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 10 )

[node name="EnemySpawnTimer" parent="." instance=ExtResource( 6 )]
wait_time = 0.8

[node name="FriendSpawnTimer" parent="." instance=ExtResource( 6 )]
autostart = true

[node name="ScreenBorder" parent="." instance=ExtResource( 4 )]

[node name="MobDestructionBorder" parent="." instance=ExtResource( 8 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="FriendSpawnTimer" to="." method="_on_FriendSpawnTimer_timeout"]
